--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -35,19 +36,20 @@ header .menu{
 
 header .menu a{
     color: white;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 500;
     text-decoration: none;
-    margin: 0 30px;
-    padding: 0 10px;
+    margin: 0 10px;
+    padding: 10px 10px;
     border-radius: 20px;
-    transition: 0.3s;
+    transition: 0.6s;
     transition-property: color;
+
 }
 
 header .menu a:hover{
-    color: black;
-    background:white;
+    color: white;
+    background:#fea116;
 }
 
 header .btn{
@@ -74,7 +76,7 @@ header .btn{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 50px;
+    padding-top: 20px;
     overflow: hidden;
 }
 
@@ -128,4 +130,20 @@ header .btn{
     100%{
         transform: rotate(360deg);
     }
+}
+
+.btn{
+    width: 150px;
+    height: 30px;
+    font-size: 17px;
+    background: #fea116;
+    color: white;
+    border: 1px solid #fea116;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.6s;
+}
+.btn:hover{
+    background: white;
+    color: #fea116;
 }
